fixed overflows

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 3rem; }
+  padding: 3rem;
+  width: 100%; }
   @media only screen and (max-width: 56.25em) {
     body {
       padding: 0; } }
