--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -25,6 +25,7 @@ html {
 body {
   box-sizing: border-box;
   padding: 3rem;
+  width: 100%;
 
   @include respond(tab-port) {
     padding: 0;
